# auditd-parser

./: BUGS.md  Cargo.toml  README.md  build.rs  deny.toml  justfile
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
src/: interpret.rs  lib.rs  parser.rs  record.rs  utils.rs
src/interpret/: arch.rs  audit_flag.rs  capability.rs  constants.rs  errno.rs  field_type.rs  mac_label.rs  mode.rs  null.rs  pam.rs  perm.rs  proctitle.rs  result.rs  signal.rs  socket.rs  success.rs  syscall.rs  uid.rs  utils.rs
src/parser/: body.rs  header.rs
tests/: integration_test.rs
tests/snapshots/: integration_test__log_data@00beeabeb700254e33d21a5c5d26ca33-2.snap  integration_test__log_data@00beeabeb700254e33d21a5c5d26ca33.snap  integration_test__log_data@00eb21307c3cf6eb3d94fd45b0929136.snap  integration_test__log_data@04f6c0fee349e077108fe1a91ff3be85.snap  integration_test__log_data@075ff6920db884b5ac93d05efd22c48f.snap  integration_test__log_data@0964b1d28cbf97185b0fe1c3a9df9915.snap  integration_test__log_data@09b536b8ae7d8c5359649ea9d8cd25f0.snap  integration_test__log_data@0a05eb5df18e17a1dc7fea917f35596d.snap  integration_test__log_data@0a08b870fea236d14505eee046e0d3d9.snap  integration_test__log_data@0ab23fcb20c825cbaa580873c1dce30a.snap  integration_test__log_data@0d95fcd2bc5683824bbe194f2bb2dfef-2.snap  integration_test__log_data@0d95fcd2bc5683824bbe194f2bb2dfef.snap  integration_test__log_data@0dc0cdea3e7fdfc5c1f79fea7c764625.snap  integration_test__log_data@10c3a35f640baf904855d236381b56b5.snap  integration_test__log_data@1160d53e7f07d89672391522c129a3cc.snap  integration_test__log_data@11e0bbb360b732eba712dd8b3dd9b100-2.snap  integration_test__log_data@11e0bbb360b732eba712dd8b3dd9b100.snap  integration_test__log_data@11f0f163e6089b8644fa7dea4099e7db.snap  integration_test__log_data@12e6d02656ed068bbc2928fd7254b0e5.snap  integration_test__log_data@135fa44ce0f2951da33c9a3a3881e573-2.snap  (+239 more)
(+12 files in other folders)
