[package]
name = "auditd-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
# TODO: maybe we should use 2021 version and MSRV 1.65
# so more people can use this
rust-version = "1.85"

[dependencies]
# TODO: should we allow for a more relaxing versioning? maybe using ^?
anyhow = "1.0.97"
nom = "8.0.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
rstest = "0.25.0"
