[package]
name = "auditd-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
# TODO: maybe we should use 2021 version and MSRV 1.65
# so more people can use this
rust-version = "1.85"

[dependencies]
# TODO: should we allow for a more relaxing versioning? maybe using ^?
nom = "8.0.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
md5 = "0.7.0"
rstest = "0.25.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
