[package]
name = "auditd-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
# TODO: maybe we should use 2021 version and MSRV 1.65
# so more people can use this
rust-version = "1.85"

[features]
serde = ["dep:serde"]

[dependencies]
bytes = "1.10.1"
hex = "0.4.3"
nom = "8.0.0"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
static_assertions = "1.1.0"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
maplit = "1.0.2"
md5 = "0.8.0"
rstest = "0.25.0"
# Enable serde feature for tests
auditd-parser = { path = ".", features = ["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
